mermaid/grammar/generated/MermaidFlowchartParser.py
# Generated from MermaidFlowchartParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MermaidFlowchartParser ( Parser ):

    grammarFileName = "MermaidFlowchartParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'flowchart'", 
                     "'graph'", "'subgraph'", "'end'", "'direction'", "'classDef'", 
                     "'class'", "'linkStyle'", "'style'", "'click'", "'call'", 
                     "'href'", "<INVALID>", "'TB'", "'TD'", "'BT'", "'LR'", 
                     "'RL'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "':::'", "'@{'", 
                     "'@'", "'((('", "'(('", "'(['", "'[('", "'[['", "'{{'", 
                     "'[/'", "'[\\'", "'['", "'('", "'{'", "'>'", "':'", 
                     "';'", "<INVALID>", "'&'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "')))'", "'))'", 
                     "')]'", "'])'", "']]'", "'}}'", "')'", "']'" ]

    symbolicNames = [ "<INVALID>", "LABEL_TEXT", "RBRACK", "RPAREN", "RBRACE", 
                      "DOUBLE_RBRACK", "DOUBLE_RPAREN", "DOUBLE_RBRACE", 
                      "TRIPLE_RPAREN", "RPAREN_RBRACK", "RBRACK_RPAREN", 
                      "KW_FLOWCHART", "KW_GRAPH", "KW_SUBGRAPH", "KW_END", 
                      "KW_DIRECTION", "KW_CLASSDEF", "KW_CLASS", "KW_LINKSTYLE", 
                      "KW_STYLE", "KW_CLICK", "KW_CALL", "KW_HREF", "KW_DEFAULT", 
                      "DIR_TB", "DIR_TD", "DIR_BT", "DIR_LR", "DIR_RL", 
                      "EDGE_SOLID", "EDGE_DOTTED", "EDGE_THICK", "EDGE_INVIS", 
                      "PIPE_LABEL", "QUOTED_STRING", "MARKDOWN_STRING", 
                      "TRIPLE_COLON", "AT_LBRACE", "AT", "TRIPLE_LPAREN", 
                      "DOUBLE_LPAREN", "LPAREN_LBRACK", "LBRACK_LPAREN", 
                      "DOUBLE_LBRACK", "DOUBLE_LBRACE", "LBRACK_FSLASH", 
                      "LBRACK_BSLASH", "LBRACK", "LPAREN", "LBRACE", "RANGLE", 
                      "COLON", "SEMI", "COMMA", "AMP", "INT", "ID", "COMMENT", 
                      "WS", "NEWLINE", "CSS_READY_WS", "CSS_VALUE_START", 
                      "CSS_WS", "ATTR_RBRACE", "M_TRIPLE_RPAREN", "M_DOUBLE_RPAREN", 
                      "M_RPAREN_RBRACK", "M_RBRACK_RPAREN", "M_DOUBLE_RBRACK", 
                      "M_DOUBLE_RBRACE", "M_RPAREN", "M_RBRACK" ]

    RULE_diagram = 0
    RULE_header = 1
    RULE_direction = 2
    RULE_statement = 3
    RULE_directionStmt = 4
    RULE_nodeStmt = 5
    RULE_nodeId = 6
    RULE_classShorthand = 7
    RULE_classicShape = 8
    RULE_nodeLabel = 9
    RULE_attrBlock = 10
    RULE_attrList = 11
    RULE_attr = 12
    RULE_attrKey = 13
    RULE_attrVal = 14
    RULE_edgeChainStmt = 15
    RULE_nodeGroup = 16
    RULE_nodeRef = 17
    RULE_edgeOp = 18
    RULE_edgeIdPrefix = 19
    RULE_edge = 20
    RULE_pipeLabel = 21
    RULE_subgraphBlock = 22
    RULE_subgraphHeader = 23
    RULE_subgraphTitle = 24
    RULE_classDefStmt = 25
    RULE_classNameList = 26
    RULE_classAssignStmt = 27
    RULE_nodeIdList = 28
    RULE_linkStyleStmt = 29
    RULE_linkStyleTargets = 30
    RULE_nodeStyleStmt = 31
    RULE_cssString = 32
    RULE_clickStmt = 33
    RULE_clickAction = 34
    RULE_clickTarget = 35
    RULE_edgePropStmt = 36

    ruleNames =  [ "diagram", "header", "direction", "statement", "directionStmt", 
                   "nodeStmt", "nodeId", "classShorthand", "classicShape", 
                   "nodeLabel", "attrBlock", "attrList", "attr", "attrKey", 
                   "attrVal", "edgeChainStmt", "nodeGroup", "nodeRef", "edgeOp", 
                   "edgeIdPrefix", "edge", "pipeLabel", "subgraphBlock", 
                   "subgraphHeader", "subgraphTitle", "classDefStmt", "classNameList", 
                   "classAssignStmt", "nodeIdList", "linkStyleStmt", "linkStyleTargets", 
                   "nodeStyleStmt", "cssString", "clickStmt", "clickAction", 
                   "clickTarget", "edgePropStmt" ]

    EOF = Token.EOF
    LABEL_TEXT=1
    RBRACK=2
    RPAREN=3
    RBRACE=4
    DOUBLE_RBRACK=5
    DOUBLE_RPAREN=6
    DOUBLE_RBRACE=7
    TRIPLE_RPAREN=8
    RPAREN_RBRACK=9
    RBRACK_RPAREN=10
    KW_FLOWCHART=11
    KW_GRAPH=12
    KW_SUBGRAPH=13
    KW_END=14
    KW_DIRECTION=15
    KW_CLASSDEF=16
    KW_CLASS=17
    KW_LINKSTYLE=18
    KW_STYLE=19
    KW_CLICK=20
    KW_CALL=21
    KW_HREF=22
    KW_DEFAULT=23
    DIR_TB=24
    DIR_TD=25
    DIR_BT=26
    DIR_LR=27
    DIR_RL=28
    EDGE_SOLID=29
    EDGE_DOTTED=30
    EDGE_THICK=31
    EDGE_INVIS=32
    PIPE_LABEL=33
    QUOTED_STRING=34
    MARKDOWN_STRING=35
    TRIPLE_COLON=36
    AT_LBRACE=37
    AT=38
    TRIPLE_LPAREN=39
    DOUBLE_LPAREN=40
    LPAREN_LBRACK=41
    LBRACK_LPAREN=42
    DOUBLE_LBRACK=43
    DOUBLE_LBRACE=44
    LBRACK_FSLASH=45
    LBRACK_BSLASH=46
    LBRACK=47
    LPAREN=48
    LBRACE=49
    RANGLE=50
    COLON=51
    SEMI=52
    COMMA=53
    AMP=54
    INT=55
    ID=56
    COMMENT=57
    WS=58
    NEWLINE=59
    CSS_READY_WS=60
    CSS_VALUE_START=61
    CSS_WS=62
    ATTR_RBRACE=63
    M_TRIPLE_RPAREN=64
    M_DOUBLE_RPAREN=65
    M_RPAREN_RBRACK=66
    M_RBRACK_RPAREN=67
    M_DOUBLE_RBRACK=68
    M_DOUBLE_RBRACE=69
    M_RPAREN=70
    M_RBRACK=71

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DiagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.HeaderContext,0)


        def EOF(self):
            return self.getToken(MermaidFlowchartParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MermaidFlowchartParser.NEWLINE)
            else:
                return self.getToken(MermaidFlowchartParser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MermaidFlowchartParser.StatementContext)
            else:
                return self.getTypedRuleContext(MermaidFlowchartParser.StatementContext,i)


        def getRuleIndex(self):
            return MermaidFlowchartParser.RULE_diagram

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiagram" ):
                return visitor.visitDiagram(self)
            else:
                return visitor.visitChildren(self)




    def diagram(self):

        localctx = MermaidFlowchartParser.DiagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_diagram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==59:
                self.state = 74
                self.match(MermaidFlowchartParser.NEWLINE)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.header()
            self.state = 82 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 81
                    self.match(MermaidFlowchartParser.NEWLINE)

                else:
                    raise NoViableAltException(self)
                self.state = 84 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 792633534419279872) != 0):
                self.state = 86
                self.statement()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(MermaidFlowchartParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def direction(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.DirectionContext,0)


        def KW_FLOWCHART(self):
            return self.getToken(MermaidFlowchartParser.KW_FLOWCHART, 0)

        def KW_GRAPH(self):
            return self.getToken(MermaidFlowchartParser.KW_GRAPH, 0)

        def getRuleIndex(self):
            return MermaidFlowchartParser.RULE_header

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeader" ):
                return visitor.visitHeader(self)
            else:
                return visitor.visitChildren(self)




    def header(self):

        localctx = MermaidFlowchartParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not(_la==11 or _la==12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 95
            self.direction()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIR_TB(self):
            return self.getToken(MermaidFlowchartParser.DIR_TB, 0)

        def DIR_TD(self):
            return self.getToken(MermaidFlowchartParser.DIR_TD, 0)

        def DIR_BT(self):
            return self.getToken(MermaidFlowchartParser.DIR_BT, 0)

        def DIR_LR(self):
            return self.getToken(MermaidFlowchartParser.DIR_LR, 0)

        def DIR_RL(self):
            return self.getToken(MermaidFlowchartParser.DIR_RL, 0)

        def getRuleIndex(self):
            return MermaidFlowchartParser.RULE_direction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDirection" ):
                return visitor.visitDirection(self)
            else:
                return visitor.visitChildren(self)




    def direction(self):

        localctx = MermaidFlowchartParser.DirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_direction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 520093696) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodeStmt(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.NodeStmtContext,0)


        def edgeChainStmt(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.EdgeChainStmtContext,0)


        def classDefStmt(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.ClassDefStmtContext,0)


        def classAssignStmt(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.ClassAssignStmtContext,0)


        def linkStyleStmt(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.LinkStyleStmtContext,0)


        def nodeStyleStmt(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.NodeStyleStmtContext,0)


        def clickStmt(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.ClickStmtContext,0)


        def edgePropStmt(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.EdgePropStmtContext,0)


        def directionStmt(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.DirectionStmtContext,0)


        def SEMI(self):
            return self.getToken(MermaidFlowchartParser.SEMI, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MermaidFlowchartParser.NEWLINE)
            else:
                return self.getToken(MermaidFlowchartParser.NEWLINE, i)

        def subgraphBlock(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.SubgraphBlockContext,0)


        def COMMENT(self):
            return self.getToken(MermaidFlowchartParser.COMMENT, 0)

        def getRuleIndex(self):
            return MermaidFlowchartParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MermaidFlowchartParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15, 16, 17, 18, 19, 20, 56]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 99
                    self.nodeStmt()
                    pass

                elif la_ == 2:
                    self.state = 100
                    self.edgeChainStmt()
                    pass

                elif la_ == 3:
                    self.state = 101
                    self.classDefStmt()
                    pass

                elif la_ == 4:
                    self.state = 102
                    self.classAssignStmt()
                    pass

                elif la_ == 5:
                    self.state = 103
                    self.linkStyleStmt()
                    pass

                elif la_ == 6:
                    self.state = 104
                    self.nodeStyleStmt()
                    pass

                elif la_ == 7:
                    self.state = 105
                    self.clickStmt()
                    pass

                elif la_ == 8:
                    self.state = 106
                    self.edgePropStmt()
                    pass

                elif la_ == 9:
                    self.state = 107
                    self.directionStmt()
                    pass


                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==52:
                    self.state = 110
                    self.match(MermaidFlowchartParser.SEMI)


                self.state = 114 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 113
                        self.match(MermaidFlowchartParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 116 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.subgraphBlock()
                pass
            elif token in [57]:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.match(MermaidFlowchartParser.COMMENT)
                self.state = 121 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 120
                        self.match(MermaidFlowchartParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 123 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                pass
            elif token in [59]:
                self.enterOuterAlt(localctx, 4)
                self.state = 126 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 125
                        self.match(MermaidFlowchartParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 128 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectionStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_DIRECTION(self):
            return self.getToken(MermaidFlowchartParser.KW_DIRECTION, 0)

        def direction(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.DirectionContext,0)


        def getRuleIndex(self):
            return MermaidFlowchartParser.RULE_directionStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDirectionStmt" ):
                return visitor.visitDirectionStmt(self)
            else:
                return visitor.visitChildren(self)




    def directionStmt(self):

        localctx = MermaidFlowchartParser.DirectionStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_directionStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(MermaidFlowchartParser.KW_DIRECTION)
            self.state = 133
            self.direction()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodeId(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.NodeIdContext,0)


        def classicShape(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.ClassicShapeContext,0)


        def classShorthand(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.ClassShorthandContext,0)


        def attrBlock(self):
            return self.getTypedRuleContext(MermaidFlowchartParser.AttrBlockContext,0)


        def getRuleIndex(self):
            return MermaidFlowchartParser.RULE_nodeStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodeStmt" ):
                return visitor.visitNodeStmt(self)
            else:
                return visitor.visitChildren(self)




    def nodeStmt(self):

        localctx = MermaidFlowchartParser.NodeStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_nodeStmt)
        self._la = 0 # Token type
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.nodeId()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2251250057871360) != 0):
                    self.state = 136
                    self.classicShape()


                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==36:
                    self.state = 139
                    self.classShorthand()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.nodeId()
                self.state = 143
                self.attrBlock()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==36:
                    self.state = 144
                    self.classShorthand()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeIdContext(ParserRuleContext):
        __slots__ = 'parser'
